stylesheet.css
/*triad palette: http://paletton.com/#uid=33s0u0kllll9G-pfwrprafhyZ9d
  tetrad palette: http://paletton.com/#uid=73s0u0klvlr9V-ifPrnrsfhzH9b*/

body {
	background-color: hsla(13, 50%, 39%, 1);
	margin: 0;
	padding: 0;
	font-family: Verdana, sans-serif;
	font-size: 100%;
}

p {
	font-size: .875em;
}

h1 {
	font-size: 1.5em;
}

h2 {
	font-size: 1em;
}

ul {
	list-style-type: circle;
}

.header {
	position: fixed;
	top:0;
	padding-bottom: 2px;
	background-color: #27556C;
	width: 100%;
	margin-bottom: 20px;
	z-index: 100;
	height: 127px;
	text-align: center;
}

@media screen and (max-width: 564px) {
	h1.domain-name {
		line-height: 32px;
	}
}

.header-container {
	max-width: 70%;
	margin: 0 15%;
}
.domain-info {
	color: #ffffff;
	text-decoration: none;
	margin: 3px;
}

.domain-name {
	font-family: serif;
	font-weight: normal;
	text-transform: uppercase;
	border-bottom: 2px solid #757575;
	margin: 5px;
	font-family: 'IBM Plex Serif', serif;
	line-height: 67px;
}

.content {
	width: 70%;
	position: relative;
	margin: 0 15%;
	margin-bottom: 15px;
	top: 141px;
}

.paragraph-block.myinfo {
	background-color: hsla(43, 59%, 62%, 1);
	text-align: center;
	padding: 15px 3px;
}

.myinfo-link {
}

.right-margin {
	margin: 3px;
}

.paragraph-block {
	padding: 15px;
	overflow: hidden;
	background-color: #FAFAFA;
	margin: 16px 0px;
	box-shadow: 1px 1px 1px 0px #828282;
	border-radius: 2px;
}

